--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             Sorry your browser doesn't support this element.
         </canvas>
     </div>
-    <p id="info"></p>
-    <div class="container">
-        <button class="btn btn-success " id="play-btn">Play</button>
-        <button class="btn btn-danger" id="pause-btn">Pause</button>
-        <button class="btn btn-warning" id="restart-btn">Restart</button>
+    <div class="d-flex justify-content-center">
+        <div class="btn-group">
+            <button class="btn btn-outline-light " id="play-btn">Play</button>
+            <button class="btn btn-outline-light" id="pause-btn">Pause</button>
+            <button class="btn btn-outline-light"
+                id="restart-btn">Restart</button>
+        </div>
     </div>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
